# aztec_tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  make.bat  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
aztec_decoder/: codewords.py  data.py  decoder.py  detection.py  exceptions.py  matrix.py  mode.py  orientation.py  tables.py
aztec_tool/: __init__.py  __main__.py  codewords.py  decoder.py  detection.py  enums.py  exceptions.py  matrix.py  mode.py  orientation.py  tables.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/references/: aztec_tool.rst  modules.rst
tests/: conftest.py  test_decoder.py  test_detection.py  test_mode.py
