[project]
name = "aztec_tool"
version = "0.1.4"
requires-python = ">=3.9"
description = "A fast, pure-Python Aztec Code reader with auto-orientation and Reed-Solomon correction."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Martin Devolder", email = "martin.devolder2@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aztec", "barcode", "decoder", "2d barcode", "image recognition", "aztec code"]
dependencies = [
    "numpy",
    "opencv-python",
    "reedsolo",
    "toml"
]

[dependency-groups]
tests = [
    "pytest",
    "pytest-cov",
]

docs = [
  "furo",
  "sphinx",
  "sphinx-design",
]

[project.urls]
Homepage = "https://github.com/mdevolde/aztec_tool.git"
Documentation = "https://github.com/mdevolde/aztec_tool/blob/master/README.md"
Repository = "https://github.com/mdevolde/aztec_tool.git"
Issues = "https://github.com/mdevolde/aztec_tool/issues"
Changelog = "https://github.com/mdevolde/aztec_tool/blob/master/CHANGELOG.md"

[project.scripts]
aztec-tool = "aztec_tool.__main__:main"

[tool.setuptools]
packages = ["aztec_tool"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["F", "W", "I", "B", "SIM", "RET", "Q", "N", "S", "BLE"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
files = ["aztec_tool", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true
disable_error_code = ["import-not-found", "import-untyped", "untyped-decorator"]
